5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_1802.log
== TEST (2019-03-26 10:57:39) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*D1))+pi**d2/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano= ((sqrt(5*D1))+pi**d2/3)
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:50) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*d1))+pi**d2/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano= ((sqrt(5*D1))+pi**d2/3)
NameError: name 'D1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:03) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*d1))+pi**d2/3)
print(dano)

-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:40) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:59:07) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- EXECUTION TIME:
0.221612
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:59:22) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano= ((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:00:32) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=vida-((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- EXECUTION TIME:
0.143033
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:32) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=vida-((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:38) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=((sqrt(5*d1))+pi**d2/3)
print(int(dano))

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:08) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=((sqrt(5*d1))+pi**(d2/3))
print(int(dano))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:02:18) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=((sqrt(5*d1))+pi**(d2/3))
print(int(dano))

-- EXECUTION TIME:
0.191608
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:33) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=((sqrt(5*d1))+pi**(d2/3))
print(vida-int(dano))

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:02:39) 
-- CODE:
from math import*
vida=int(input("vida inicial do monstro: "))
d1=int(input("qual valor do dado 1? "))
d2=int(input("qual valor do dado 2? "))



dano=((sqrt(5*d1))+pi**(d2/3))
print(vida-int(dano))

-- EXECUTION TIME:
0.123366
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
